--- a/public/404.html
+++ b/public/404.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>404 Page not found | NetWithAlex</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/404.html">
+<link rel="canonical" href="https://netwithalex.netlify.app/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.d6fcd20a4fb86efa4dfac8ec95da60244cc8871042183da1ef28e3a762ad79c8.css" integrity="sha256-1vzSCk&#43;4bvpN&#43;sjsldpgJEzIhxBCGD2h7yjjp2Ktecg=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
+<link rel="icon" href="https://netwithalex.netlify.app/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://netwithalex.netlify.app/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://netwithalex.netlify.app/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://netwithalex.netlify.app/apple-touch-icon.png">
+<link rel="mask-icon" href="https://netwithalex.netlify.app/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
+<link rel="alternate" hreflang="en" href="https://netwithalex.netlify.app/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -55,7 +55,15 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:url" content="https://netwithalex.netlify.app/404.html">
+  <meta property="og:site_name" content="NetWithAlex">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:locale" content="en-US">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="">
+
 </head>
 
 <body class="list" id="top">
@@ -69,7 +77,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="NetWithAlex (Alt + H)">NetWithAlex</a>
+            <a href="https://netwithalex.netlify.app/" accesskey="h" title="NetWithAlex (Alt + H)">NetWithAlex</a>
             <div class="logo-switches">
             </div>
         </div>
@@ -86,17 +94,17 @@
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
+                <a href="https://netwithalex.netlify.app/posts/" title="Blogs">
                     <span>Blogs</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/about/" title="About me.">
+                <a href="https://netwithalex.netlify.app/about/" title="About me.">
                     <span>About me.</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/search/" title="🔍">
+                <a href="https://netwithalex.netlify.app/search/" title="🔍">
                     <span>🔍</span>
                 </a>
             </li>
@@ -108,7 +116,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">NetWithAlex</a></span> · 
+        <span>&copy; 2025 <a href="https://netwithalex.netlify.app/">NetWithAlex</a></span> · 
 
     <span>
         Powered by
