--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -4,7 +4,7 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>Pages | NetWithAlex</title>
 <meta name="keywords" content="">
 <meta name="description" content="Pages - NetWithAlex">
@@ -56,7 +56,30 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:url" content="http://localhost:1313/pages/">
+  <meta property="og:site_name" content="NetWithAlex">
+  <meta property="og:title" content="Pages">
+  <meta property="og:locale" content="en-US">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Pages">
+<meta name="twitter:description" content="">
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position":  1 ,
+      "name": "Pages",
+      "item": "http://localhost:1313/pages/"
+    }
+  ]
+}
+</script>
 </head>
 
 <body class="list" id="top">
