--- a/public/about/index.html
+++ b/public/about/index.html
@@ -256,8 +256,13 @@ Thanks for being here. Hope you find my blog useful and entertaining. Let&#39;s 
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
