--- a/public/building-my-first-sd-wan-ai-assistant-with-langchain/index.html
+++ b/public/building-my-first-sd-wan-ai-assistant-with-langchain/index.html
@@ -181,8 +181,13 @@ Since then, I have been doing research and thinking about a nice use case for me
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
