--- a/public/ci-cd-deployment-strategies/index.html
+++ b/public/ci-cd-deployment-strategies/index.html
@@ -185,8 +185,13 @@ All changes are bundled together and deployed at once - this is the essence of B
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
