--- a/public/demystifying-aar-1-3-the-foundations/index.html
+++ b/public/demystifying-aar-1-3-the-foundations/index.html
@@ -178,8 +178,13 @@ Think about routing technologies out there, most of them got really good at reac
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
