--- a/public/docker-golden-images/index.html
+++ b/public/docker-golden-images/index.html
@@ -181,8 +181,13 @@ The process should include testing and verification methodologies. Also, from a 
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
