--- a/public/improving-my-sd-wan-assistant-multiple-agents/index.html
+++ b/public/improving-my-sd-wan-assistant-multiple-agents/index.html
@@ -183,8 +183,13 @@ To achieve this, I will use LangGraph officially defined as:">
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
