--- a/public/tracking-sd-wan-incidents-with-service-now/index.html
+++ b/public/tracking-sd-wan-incidents-with-service-now/index.html
@@ -178,8 +178,13 @@ As networks evolve to provide better user experience and new technologies to man
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
