--- a/public/ansible-notes/index.html
+++ b/public/ansible-notes/index.html
@@ -184,8 +184,13 @@ There are a lot of resources to learn Ansible online, these notes should serve o
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
