--- a/public/ci-tools/index.html
+++ b/public/ci-tools/index.html
@@ -183,8 +183,13 @@ Jenkins is a free automation server (open source) designed to automate parts of 
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
