--- a/public/demystifying-aar-understanding-different-scenarios/index.html
+++ b/public/demystifying-aar-understanding-different-scenarios/index.html
@@ -181,8 +181,13 @@ Now, we continue by digging deeper on different AAR configurations, more specifi
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
