--- a/public/devops-ci-cd-pipeline/index.html
+++ b/public/devops-ci-cd-pipeline/index.html
@@ -184,8 +184,13 @@ In Continuous Integration (CI), a crucial idea is the frequent uploading of code
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
