--- a/public/network-wide-path-insights-an-introduction/index.html
+++ b/public/network-wide-path-insights-an-introduction/index.html
@@ -181,8 +181,13 @@ Next, you get someone to help you verify the basics. DHCP and DNS work. Gateway 
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/posts/" title="Blogs">
-                    <span>Blogs</span>
+                <a href="http://localhost:1313/archives/" title="Archive">
+                    <span>Archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/category/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
