--- a/public/ansible-notes/index.html
+++ b/public/ansible-notes/index.html
@@ -243,7 +243,7 @@ There are a lot of resources to learn Ansible online, these notes should serve o
                 <li>
                     <a href="#practical-examples" aria-label="Practical Examples">Practical Examples</a></li>
                 <li>
-                    <a href="#back-to-blueprintstudy-devops-blueprint" aria-label="Back to BluePrint">Back to BluePrint</a>
+                    <a href="#back-to-blueprint" aria-label="Back to BluePrint">Back to BluePrint</a>
                 </li>
             </ul>
         </div>
@@ -295,7 +295,7 @@ There are a lot of resources to learn Ansible online, these notes should serve o
 <p>Playbooks use modules to interact with the managed modes . I recommend getting familiar with some <a href="https://docs.ansible.com/ansible/latest/collections/cisco/index.html">Cisco modules</a></p>
 <h3 id="practical-examples">Practical Examples<a hidden class="anchor" aria-hidden="true" href="#practical-examples">#</a></h3>
 <p>You can find some practical examples on the following <a href="https://github.com/aruiz-p/NetWithAlex-Ansible/tree/main">GitHub</a> repository.</p>
-<h3 id="back-to-blueprintstudy-devops-blueprint"><a href="/study-devops-blueprint/">Back to BluePrint</a><a hidden class="anchor" aria-hidden="true" href="#back-to-blueprintstudy-devops-blueprint">#</a></h3>
+<h3 id="back-to-blueprint"><a href="/study-devops-blueprint/">Back to BluePrint</a><a hidden class="anchor" aria-hidden="true" href="#back-to-blueprint">#</a></h3>
 
 
   </div>
