--- a/public/ci-cd-deployment-strategies/index.html
+++ b/public/ci-cd-deployment-strategies/index.html
@@ -242,7 +242,7 @@ All changes are bundled together and deployed at once - this is the essence of B
                     <a href="#comparison-table" aria-label="Comparison Table">Comparison Table</a></li></ul>
                 </li>
                 <li>
-                    <a href="#go-back-to-blueprintstudy-devops-blueprint" aria-label="Go back to Blueprint">Go back to Blueprint</a>
+                    <a href="#go-back-to-blueprint" aria-label="Go back to Blueprint">Go back to Blueprint</a>
                 </li>
             </ul>
         </div>
@@ -287,7 +287,7 @@ All changes are bundled together and deployed at once - this is the essence of B
 - Early detection of potential issues<br>
 - Minimizes risk by limiting impact to a small subset of users or serversRequires careful selection and monitoring of the canary group<br>
 - May not be suitable for all applications, especially those with small user bases or where changes impact the entire system equallyYes3</p>
-<h2 id="go-back-to-blueprintstudy-devops-blueprint"><a href="/study-devops-blueprint">Go back to Blueprint</a><a hidden class="anchor" aria-hidden="true" href="#go-back-to-blueprintstudy-devops-blueprint">#</a></h2>
+<h2 id="go-back-to-blueprint"><a href="/study-devops-blueprint">Go back to Blueprint</a><a hidden class="anchor" aria-hidden="true" href="#go-back-to-blueprint">#</a></h2>
 
 
   </div>
