--- a/public/docker-golden-images/index.html
+++ b/public/docker-golden-images/index.html
@@ -242,7 +242,7 @@ The process should include testing and verification methodologies. Also, from a 
                 <li>
                     <a href="#additional-references" aria-label="Additional References">Additional References</a></li>
                 <li>
-                    <a href="#go-back-to-blueprint" aria-label="Go back to blueprint">Go back to blueprint</a>
+                    <a href="#go-back-to-blueprintstudy-devops-blueprint" aria-label="Go back to blueprint">Go back to blueprint</a>
                 </li>
             </ul>
         </div>
@@ -291,7 +291,7 @@ The process should include testing and verification methodologies. Also, from a 
 <p><a href="https://dockerlabs.collabnix.com/beginners/dockertrustedregistry.html">Docker Trusted Registry (DTR)</a></p>
 <p><a href="https://docs.docker.com/registry/">Private Docker Registry</a></p>
 <p><a href="https://docs.docker.com/reference/cli/docker/image/build/">Docker image build and push</a></p>
-<h3 id="go-back-to-blueprint"><a href="/study-devops-blueprint/">Go back to blueprint</a><a hidden class="anchor" aria-hidden="true" href="#go-back-to-blueprint">#</a></h3>
+<h3 id="go-back-to-blueprintstudy-devops-blueprint"><a href="/study-devops-blueprint/">Go back to blueprint</a><a hidden class="anchor" aria-hidden="true" href="#go-back-to-blueprintstudy-devops-blueprint">#</a></h3>
 
 
   </div>
