--- a/public/docker-safety-practices/index.html
+++ b/public/docker-safety-practices/index.html
@@ -238,7 +238,7 @@ Dockerfiles are used to define the steps needed to build Docker images. It&rsquo
                     <a href="#use-environment-variables-and-files" aria-label="Use environment variables and files">Use environment variables and files</a></li></ul>
                 </li>
                 <li>
-                    <a href="#go-back-to-blueprint" aria-label="Go back to Blueprint">Go back to Blueprint</a>
+                    <a href="#go-back-to-blueprintstudy-devops-blueprint" aria-label="Go back to Blueprint">Go back to Blueprint</a>
                 </li>
             </ul>
         </div>
@@ -292,7 +292,7 @@ Dockerfiles are used to define the steps needed to build Docker images. It&rsquo
 </span></span><span style="display:flex;"><span>
 </span></span><span style="display:flex;"><span><span style="color:#75715e"># Run the Docker container with environment variables from file</span>
 </span></span><span style="display:flex;"><span>docker run <span style="color:#f92672">--</span>env<span style="color:#f92672">-</span>file my_env_vars<span style="color:#f92672">.</span>env myapp
-</span></span></code></pre></div><h2 id="go-back-to-blueprint"><a href="/study-devops-blueprint">Go back to Blueprint</a><a hidden class="anchor" aria-hidden="true" href="#go-back-to-blueprint">#</a></h2>
+</span></span></code></pre></div><h2 id="go-back-to-blueprintstudy-devops-blueprint"><a href="/study-devops-blueprint">Go back to Blueprint</a><a hidden class="anchor" aria-hidden="true" href="#go-back-to-blueprintstudy-devops-blueprint">#</a></h2>
 
 
   </div>
