--- a/public/simplifying-aar-3-3-fallback-to-best-path/index.html
+++ b/public/simplifying-aar-3-3-fallback-to-best-path/index.html
@@ -323,7 +323,7 @@
 <blockquote>
 <p>When the data traffic does not meet any of the SLA class requirements, this feature allows you to select the best tunnel path criteria sequence using the Fallback Best Tunnel.</p>
 <p>Cisco SD-WAN Manager uses best of worst (BOW) to find a best tunnel when no tunnel meets any of the SLA class requirements.</p>
-<p><a href="https://www.cisco.com/c/en/us/td/docs/routers/sdwan/configuration/policies/ios-xe-17/policies-book-xe/application-aware-routing.html">https://www.cisco.com/c/en/us/td/docs/routers/sdwan/configuration/policies/ios-xe-17/policies-book-xe/application-aware-routing.html</a></p>
+<p><a href="https://www.cisco.com/c/en/us/td/docs/routers/sdwan/configuration/policies/ios-xe-17/policies-book-xe/application-aware-routing.html" target="_blank" rel="nofollow noopener noreferrer">https://www.cisco.com/c/en/us/td/docs/routers/sdwan/configuration/policies/ios-xe-17/policies-book-xe/application-aware-routing.html</a></p>
 </blockquote>
 <h3 id="best-of-worst">Best of Worst<a hidden class="anchor" aria-hidden="true" href="#best-of-worst">#</a></h3>
 <p>Let&rsquo;s see how BOW works with the following example:</p>
@@ -537,7 +537,7 @@
 </span></span><span style="display:flex;"><span>BR10#
 </span></span></code></pre></div><p>It&rsquo;s clear that the loss wasn&rsquo;t used to come up with the BOW, otherwise we would see all the tunnels acting as fallback for SLA Class index 1. Instead, tunnels with lowest latency were selected. Notice that I could have added a latency variance to include other tunnels with similar numbers.</p>
 <h2 id="conclusion">Conclusion<a hidden class="anchor" aria-hidden="true" href="#conclusion">#</a></h2>
-<p>Through the last three posts, we have witnessed AAR being a critical SD-WAN functionality to protect the SLA of our applications. I hope that after explaining and verifying different scenarios, you now have a better understanding and feel more confident to try AAR within your SD-WAN infrastructure.. The <a href="https://www.cisco.com/c/en/us/td/docs/routers/sdwan/configuration/policies/ios-xe-17/policies-book-xe/application-aware-routing.html#config-variance-best-tunnel-path">configuration guide</a> is very complete, so get familiar with it and use it when you need it.</p>
+<p>Through the last three posts, we have witnessed AAR being a critical SD-WAN functionality to protect the SLA of our applications. I hope that after explaining and verifying different scenarios, you now have a better understanding and feel more confident to try AAR within your SD-WAN infrastructure.. The <a href="https://www.cisco.com/c/en/us/td/docs/routers/sdwan/configuration/policies/ios-xe-17/policies-book-xe/application-aware-routing.html#config-variance-best-tunnel-path" target="_blank" rel="nofollow noopener noreferrer">configuration guide</a> is very complete, so get familiar with it and use it when you need it.</p>
 <p>Let me know your thoughts in the comments.</p>
 <p>See you soon!</p>
 
