--- a/public/appqoe-fec-es/index.html
+++ b/public/appqoe-fec-es/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="">
 <meta name="description" content="Aprende cómo funciona Forward Error Correction (FEC) en Cisco SD-WAN para mejorar el rendimiento de las aplicaciones en enlaces con pérdida de paquetes. Explora casos de uso, configuración y resultados de pruebas.">
 <meta name="author" content="Alex">
-<link rel="canonical" href="http://localhost:1313/appqoe-fec/">
+<link rel="canonical" href="http://localhost:1313/appqoe-fec-es/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.d6fcd20a4fb86efa4dfac8ec95da60244cc8871042183da1ef28e3a762ad79c8.css" integrity="sha256-1vzSCk&#43;4bvpN&#43;sjsldpgJEzIhxBCGD2h7yjjp2Ktecg=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -19,7 +19,7 @@
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" hreflang="en" href="http://localhost:1313/appqoe-fec-en/">
-<link rel="alternate" hreflang="es" href="http://localhost:1313/appqoe-fec/">
+<link rel="alternate" hreflang="es" href="http://localhost:1313/appqoe-fec-es/">
 <noscript>
     <style>
         #theme-toggle,
@@ -94,7 +94,7 @@
     </script>
 
     
-<meta property="og:url" content="http://localhost:1313/appqoe-fec/">
+<meta property="og:url" content="http://localhost:1313/appqoe-fec-es/">
   <meta property="og:site_name" content="NetWithAlex">
   <meta property="og:title" content="Serie AppQoe: Forward Error Correction (FEC)">
   <meta property="og:description" content="Aprende cómo funciona Forward Error Correction (FEC) en Cisco SD-WAN para mejorar el rendimiento de las aplicaciones en enlaces con pérdida de paquetes. Explora casos de uso, configuración y resultados de pruebas.">
@@ -123,7 +123,7 @@
       "@type": "ListItem",
       "position":  2 ,
       "name": "Serie AppQoe: Forward Error Correction (FEC)",
-      "item": "http://localhost:1313/appqoe-fec/"
+      "item": "http://localhost:1313/appqoe-fec-es/"
     }
   ]
 }
@@ -149,7 +149,7 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "http://localhost:1313/appqoe-fec/"
+    "@id": "http://localhost:1313/appqoe-fec-es/"
   },
   "publisher": {
     "@type": "Organization",
